lintian-brush (0.59) UNRELEASED; urgency=medium

  * unused-license-paragraph-in-dep5-copyright: downgrade certainty when
    license is mentioned elsewhere.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 02 Mar 2020 00:38:50 +0000

lintian-brush (0.58) unstable; urgency=medium

  * Add override for autotools-pkg-config-macro-not-cross-compilation-
    safe, which correctly (but intentionally) gets triggered for our
    test.
  * Improve handling of long lines in debian/changelog, especially when
    dealing with subitems.
  * Ignore rather than print tracebacks when mandatory fields in
    debian/control are missing.
  * When generating watch files for pypi, check package details against
    the API.
  * Strip related comments when removing options from
    debian/source/options.
  * Keep copies of the BSD license inlined, but rename BSD => BSD-3-
    clause (per the spec).
  * Don't remove patch files that are present but not mentioned in
    series unless --opinionated is specified.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 14 Feb 2020 02:35:54 +0000

lintian-brush (0.57) unstable; urgency=medium

  * Add fixer for debian-changelog-line-too-long.
  * Add fixer for misspelling-in-bug-closes.
  * Add some initial code for cleaning up unused lintian overrides.
  * Drop the no-dh-sequencer fixer.
  * Drop unnecessary --with=systemd if debhelper 10 is in use. Closes:
    #949818
  * Add fixer for unused-override. Closes: #932528
  * Properly parse exceptions in license synopsis.
  * Add fixer for autotools-pkg-config-macro-not-cross-compilation-safe.
  * Ship a renamed-tags.json file, since the upstream file has
    disappeared. Closes: #950321

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 31 Jan 2020 11:29:12 +0000

lintian-brush (0.56) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Attempt to keep preferred order of fields in YAML files.
  * Don't write debian/upstream/metadata when just setting name. Closes:
    #948276