@@ -1,2 +1,2 @@
-Upgrade to newer source format.
+Upgrade to newer source format 3.0 (native).
 Fixed-Lintian-Tags: older-source-format
