@@ -1,2 +1,2 @@
-Explicitly specify source format.
-Fixed-Lintian-Tags: missing-debian-source-format
+Upgrade to newer source format 3.0 (quilt).
+Fixed-Lintian-Tags: missing-debian-source-format, older-source-format
