@@ -2,6 +2,7 @@ lintian-brush (0.59) UNRELEASED; urgency=medium
 
   * unused-license-paragraph-in-dep5-copyright: downgrade certainty when
     license is mentioned elsewhere.
+  * Look for custom patches directory in debian/rules.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 02 Mar 2020 00:38:50 +0000
 
